Add modeling content and lab

--- a/01-Intro.ipynb
+++ b/01-Intro.ipynb
@@ -35,7 +35,9 @@
     "This class is *not* designed to\n",
     "* Go in depth on the APIs or internals of any specific tools (there's just not enough time)\n",
     "* \"Sell you\" on any specific open-source project or product\n",
-    "    * We want to get comfortable discussing strength/weaknesses, and then you can choose a solution that is right for you"
+    "    * We want to get comfortable discussing strength/weaknesses, and then you can choose a solution that is right for you\n",
+    "    \n",
+    "*We'll be welcoming and exploring Questions & Answers more than most of my classes (which are heavier on the code and internals)*"
    ]
   },
   {
