Finished complete draft

--- a/01-Intro.ipynb
+++ b/01-Intro.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Techniques for Data Science with Big Datasets\n",
     "\n",
-    "FIXME: image\n",
+    "<img src='images/data.jpg' width=400/>\n",
     "\n",
     "## Well... that sounds awfully vague, doesn't it?\n",
     "\n",
@@ -68,9 +68,7 @@
     "* How do you get data out of your data lake?\n",
     "* What tools do you typically use for\n",
     "    * feature engineering\n",
-    "    * modeling\n",
-    "\n",
-    "FIXME create polls on directpoll.com"
+    "    * modeling"
    ]
   },
   {
@@ -81,20 +79,40 @@
     "\n",
     "__Compute power has grown, but datasets have not__\n",
     "\n",
-    "FIXME: slides w dataset sizes\n",
+    "<img src='images/largest.jpg' width=650/>\n",
     "\n",
-    "* The largest ML datasets used vs. largest tractable on a single node (no cluster) has changed dramatically\n",
-    "* Resulting in new definitions for small, medium, and big data"
+    "\n",
+    "*Source: https://www.kdnuggets.com/2020/07/poll-largest-dataset-analyzed-results.html*\n",
+    "\n",
+    "The largest ML datasets used vs. largest tractable on a single node (no cluster) has changed dramatically\n",
+    "* Resulting in new definitions for small, medium, and big data\n",
+    "* Avoid \"big data\" tools and their taxes when you can\n",
+    "\n",
+    "Some \"medium data\" approaches\n",
+    "* Downsample\n",
+    "* XGBoost external memory (out-of-core)\n",
+    "* TF/PyTorch data loaders\n",
+    "* sklearn + `partial_fit` (incrementalizable) algorithms\n",
+    "    * Simplify with Dask, though Dask not strictly necessary\n",
+    "* Apache Arrow / PyArrow (https://arrow.apache.org/docs/python/memory.html)\n",
+    "* Honorable mention for feature engineering: Vaex"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Roadmap for tooling journey\n",
+    "## Roadmap for large-scale tooling journey\n",
     "\n",
     "<img src='images/flow-base.png' width=800>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
