--- a/03-Features-Modeling.ipynb
+++ b/03-Features-Modeling.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "FIXME: image"
+    "<img src='images/psf-logo@2x.png'/>"
    ]
   },
   {
@@ -78,11 +78,18 @@
     "\n",
     "__What does this mean?__\n",
     "\n",
-    "We can take many of our local workflows to large-scale data via Dask with fairly minimal effort -- because under the hood, Dask is designed to use those \"small data\" structures in federation to create arbitrarily large ones.\n",
-    "\n",
-    "FIXME: Dask DF and Array images\n",
-    "\n",
-    "\n"
+    "We can take many of our local workflows to large-scale data via Dask with fairly minimal effort -- because under the hood, Dask is designed to use those \"small data\" structures in federation to create arbitrarily large ones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table align=left><tr><td>\n",
+    "    <img src='images/dask-dataframe.svg' width=350>\n",
+    "</td><td style='width:10em;'>\n",
+    "</td><td>\n",
+    "    <img src='images/dask-array.svg'></td></tr></table>"
    ]
   },
   {
@@ -109,7 +116,6 @@
    "outputs": [],
    "source": [
     "from dask import dataframe as ddf\n",
-    "from dask import array as da\n",
     "from dask.distributed import Client\n",
     "\n",
     "client = Client(n_workers=2, threads_per_worker=1, memory_limit='1GB')\n",
@@ -190,7 +196,7 @@
     "    * Ray for stateful-agent simulations\n",
     "    * (Dask is an option)\n",
     "    \n",
-    "## Example: Linear Model w Dask"
+    "## Example: Linear Model with Dask"
    ]
   },
   {
