--- a/06-Lab-Tuning.ipynb
+++ b/06-Lab-Tuning.ipynb
@@ -106,6 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ray.shutdown()\n",
     "ray.init()\n",
     "\n",
     "tune.run(\n",
@@ -118,7 +119,7 @@
     "    },\n",
     "    num_samples=10,\n",
     "    resources_per_trial={\n",
-    "        \"cpu\": 2,\n",
+    "        \"cpu\": 1,\n",
     "        \"gpu\": 0\n",
     "    },\n",
     "    config={\n",
