--- a/02-Extract.ipynb
+++ b/02-Extract.ipynb
@@ -60,16 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark.sql(\"SELECT * FROM range(10)\").show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spark.version"
+    "spark.sql(\"SELECT * FROM parquet.`data/california`\").show()"
    ]
   },
   {
@@ -96,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
