--- a/07-Scoring-Orchestration.ipynb
+++ b/07-Scoring-Orchestration.ipynb
@@ -84,9 +84,7 @@
     "\n",
     "Naturally, a project's own pitch is not a neutral argument to use that tool -- and I'm not suggesting you take it as such.\n",
     "\n",
-    "It is, however, well worth consideration in your system design.\n",
-    "\n",
-    "## Q&A"
+    "It is, however, well worth consideration in your system design."
    ]
   },
   {
@@ -113,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
