--- a/08-RaySGD-MLflow.ipynb
+++ b/08-RaySGD-MLflow.ipynb
@@ -1,40 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "married-madagascar",
+   "metadata": {},
+   "source": [
+    "# Bonus: RaySGD + MLflow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "nuclear-native",
+   "metadata": {},
+   "source": [
+    "## Distributed Deep Learning Made Simple: RaySGD\n",
+    "\n",
+    "Distributed deep learning -- or optimization in general using TensorFlow/PyTorch -- has slowly been getting easier, even if it's not 100% transparent (or turn-key) quite yet.\n",
+    "\n",
+    "Native solutions (official TF/PyTorch distributed code) are getting easier; Horovod has matured and is straightforward. But one of the simplest approaches of all comes via the Ray project.\n",
+    "\n",
+    "In particular, RaySGD provides a zero-ops and minimal API approach: https://docs.ray.io/en/master/raysgd/raysgd.html\n",
+    "\n",
+    "Let's take a look! \n",
+    "\n",
+    "First, we'll set up a toy example (adapted from https://docs.ray.io/en/master/raysgd/raysgd_tensorflow.html)\n",
+    "\n",
+    "Later, we'll try a real dataset and integrate with additional tools.\n",
+    "\n",
+    "Here, we create trivial dummy data and a Tensorflow Dataset loader."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dominican-cradle",
+   "id": "apparent-healthcare",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense\n",
     "import numpy as np\n",
     "\n",
-    "import ray\n",
-    "from ray import tune\n",
-    "from ray.util.sgd.tf.tf_trainer import TFTrainer, TFTrainable\n",
-    "\n",
-    "NUM_TRAIN_SAMPLES = 1000\n",
-    "NUM_TEST_SAMPLES = 400\n",
-    "\n",
-    "def create_config(batch_size):\n",
-    "    return {\n",
-    "        # todo: batch size needs to scale with # of workers\n",
-    "        \"batch_size\": batch_size,\n",
-    "        \"fit_config\": {\n",
-    "            \"steps_per_epoch\": NUM_TRAIN_SAMPLES // batch_size\n",
-    "        },\n",
-    "        \"evaluate_config\": {\n",
-    "            \"steps\": NUM_TEST_SAMPLES // batch_size,\n",
-    "        }\n",
-    "    }\n",
-    "\n",
-    "\n",
-    "def linear_dataset(a=2, size=1000):\n",
+    "def linear_dataset(size=100):\n",
     "    x = np.random.rand(size)\n",
-    "    y = x / 2\n",
+    "    y = 2 * x\n",
     "\n",
     "    x = x.reshape((-1, 1))\n",
     "    y = y.reshape((-1, 1))\n",
@@ -52,8 +59,27 @@
     "        batch_size)\n",
     "    test_dataset = test_dataset.repeat().batch(batch_size)\n",
     "\n",
-    "    return train_dataset, test_dataset\n",
-    "\n",
+    "    return train_dataset, test_dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "velvet-savage",
+   "metadata": {},
+   "source": [
+    "Next, we define our model using regular `tf.keras` components. We define a model-creation function, as RaySGD uses a factory pattern (basically a pattern that takes creator functions rather than object instances) for dependencies."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adopted-communications",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
     "\n",
     "def simple_model(config):\n",
     "    model = Sequential([Dense(10, input_shape=(1, )), Dense(1)])\n",
@@ -63,8 +89,46 @@
     "        loss=\"mean_squared_error\",\n",
     "        metrics=[\"mean_squared_error\"])\n",
     "\n",
-    "    return model\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "certified-orange",
+   "metadata": {},
+   "source": [
+    "Now we get to the RaySGD code. After definining a minimal \"config\" object, we define a trainer function that accomplishes these steps:\n",
+    "* instantiate a TFTrainer instance to wrap the actual distributed training\n",
+    "* explicitly calculate starting model performance\n",
+    "* train multiple epochs\n",
+    "    * here we're explicitly calling `train` twice ... in a real example we would run more epochs with a control loop\n",
+    "* calculate final stats, change in the loss, and a \"sanity check\" that the loss actually went down"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "alternate-resort",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ray\n",
+    "from ray.util.sgd.tf.tf_trainer import TFTrainer, TFTrainable\n",
     "\n",
+    "NUM_TRAIN_SAMPLES = 1000\n",
+    "NUM_TEST_SAMPLES = 400\n",
+    "\n",
+    "def create_config(batch_size):\n",
+    "\n",
+    "    return {\n",
+    "        \"batch_size\": batch_size,\n",
+    "        \"fit_config\": {\n",
+    "            \"steps_per_epoch\": NUM_TRAIN_SAMPLES // batch_size\n",
+    "        },\n",
+    "        \"evaluate_config\": {\n",
+    "            \"steps\": NUM_TEST_SAMPLES // batch_size,\n",
+    "        }\n",
+    "    }\n",
     "\n",
     "def train_example(num_replicas=1, batch_size=128, use_gpu=False):\n",
     "    trainer = TFTrainer(\n",
@@ -100,37 +164,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "reverse-official",
+   "cell_type": "markdown",
+   "id": "victorian-hometown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ray.init()"
+    "Ok, now that we're all set up, let's start Ray and run the training!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "authentic-spirituality",
+   "id": "checked-wheat",
    "metadata": {},
    "outputs": [],
    "source": [
+    "ray.init()\n",
+    "\n",
     "train_example()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ongoing-catch",
+   "cell_type": "markdown",
+   "id": "vocal-stevens",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Note that the Dashboard which defaults to `localhost:8265` is a key part of the Ray system, but may not be compatible with (and visible through) the binder container proxy.\n",
+    "\n",
+    "__How does this work?__\n",
+    "\n",
+    "In a nutshell,\n",
+    "* `TFTrainer` wraps TensorFlow's `MultiWorkerMirroredStrategy` as described here: https://docs.ray.io/en/master/raysgd/raysgd_tensorflow.html\n",
+    "* `MultiWorkerMirroredStrategy` is a synchronous distributed approach featuring multilateral reduce (e.g., AllReduce): https://www.tensorflow.org/api_docs/python/tf/distribute/experimental/MultiWorkerMirroredStrategy\n",
+    "\n",
+    "But the \"Hello World\" isn't very impressive. Let's at least try a slightly more realistic, if not industrial strength, dataset and model.\n",
+    "\n",
+    "We'll train a shallow (1-layer) dense feed-forward network with ReLU activation on the R/ggplot2 diamonds data (https://ggplot2.tidyverse.org/reference/diamonds.html)\n",
+    "\n",
+    "Start with a data loader, model, and config builder"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "victorian-relaxation",
+   "id": "sharp-plaintiff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recorded-folder",
+   "id": "cutting-translator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "controlled-pierce",
+   "id": "attended-coordinator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,9 +270,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "banned-equation",
+   "metadata": {},
+   "source": [
+    "For clarity, we'll define a bare-basics training function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "present-welsh",
+   "id": "dimensional-roberts",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,64 +293,132 @@
     "        verbose=False,\n",
     "        config=create_diamonds_config(batch_size))\n",
     "\n",
-    "    # model baseline performance\n",
     "    start_stats = trainer.validate()\n",
     "    print(start_stats)\n",
     "\n",
     "    for i in range(32):\n",
     "        trainer.train()\n",
     "\n",
-    "    # model performance after training (should improve)\n",
     "    end_stats = trainer.validate()\n",
     "    print(end_stats)\n",
-    "\n",
-    "    # sanity check that training worked\n",
-    "    dloss = end_stats[\"validation_loss\"] - start_stats[\"validation_loss\"]\n",
-    "    dmse = (end_stats[\"validation_mean_squared_error\"] -\n",
-    "            start_stats[\"validation_mean_squared_error\"])\n",
-    "    print(f\"dLoss: {dloss}, dMSE: {dmse}\")\n",
-    "\n",
-    "    if dloss > 0 or dmse > 0:\n",
-    "        print(\"training sanity check failed. loss increased!\")\n",
-    "    else:\n",
-    "        print(\"success!\")\n",
     "        \n",
     "train_diamonds()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "narrative-amendment",
+   "metadata": {},
+   "source": [
+    "We won't get famous for these results, but we definitely made progress.\n",
+    "\n",
+    "## MLflow\n",
+    "\n",
+    "One of the top open source frameworks for managing machine learning, from experiment to deployment, is MLflow (https://mlflow.org/)\n",
+    "\n",
+    "Created by Databricks and open-sourced under the Linux Foundation, MLflow has rapidly evolved to support a variety of key ML engineering tasks including\n",
+    "* Experiment tracking\n",
+    "    * Parameters, results, data, code, and model artefacts/assets\n",
+    "* Tracking project environments for reproducibility\n",
+    "* Deployment from a variety of model formats to various target (prediction/scoring) environments\n",
+    "* Model registry\n",
+    "    * Versioning, lineage/provenance\n",
+    "\n",
+    "More features are planned for the future; today, we'll look at just the original experiment tracking features.\n",
+    "\n",
+    "MLflow supports auto-instrumentation for a number of popular platforms (https://mlflow.org/docs/latest/tracking.html#automatic-logging) but these don't include RaySGD/Distributed TensorFlow yet... plus we want to see concretely how the pieces fit together.\n",
+    "\n",
+    "Before proceeding, start the MLflow UI server. On Binder/JupyterLab, open a new Terminal and type\n",
+    "\n",
+    "`mlflow ui`\n",
+    "\n",
+    "The UI is served on port 5000 by default, which should be accessible via the JupyterLab proxy (open a new tab and replace `/lab...` in your URL with `/proxy/5000/`)\n",
+    "\n",
+    "We'll start with the minimal code to save params and metrics to MLflow"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "automated-disposition",
+   "id": "authentic-archive",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mlflow import log_metric, log_param, end_run\n",
+    "\n",
+    "log_param(\"foo_count\", 42)\n",
+    "log_param(\"bar_count\", 43)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    log_metric(\"score\", i)\n",
+    "    \n",
+    "end_run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "hydraulic-official",
+   "metadata": {},
+   "source": [
+    "This info should appear in the UI (though it may require a refresh)\n",
+    "\n",
+    "We can use a context manager for our runs and provide step indices to enable additional view."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bigger-expert",
    "metadata": {},
    "outputs": [],
    "source": [
     "import mlflow\n",
     "\n",
-    "mlflow.create_experiment(\"Diamonds RaySGD\")"
+    "with mlflow.start_run():\n",
+    "    for i in range(10):\n",
+    "        log_metric(\"score\", i*i, step=i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "limited-biology",
+   "metadata": {},
+   "source": [
+    "Now let's look at a more realistic use of MLflow, including\n",
+    "* Creating a named Experiment\n",
+    "* Recording data for runs to this Experiment\n",
+    "* Integrating with our RaySGD/TF model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "innovative-granny",
+   "id": "purple-czech",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment_id = mlflow.create_experiment(\"Diamonds RaySGD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "horizontal-transaction",
    "metadata": {},
    "outputs": [],
    "source": [
     "from  mlflow.tracking import MlflowClient\n",
-    "client = MlflowClient()\n",
-    "experiments = client.list_experiments() # returns a list of mlflow.entities.Experiment\n",
-    "experiments"
+    "client = MlflowClient()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "copyrighted-process",
+   "id": "advisory-induction",
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = client.create_run(experiments[0].experiment_id) # returns mlflow.entities.Run\n",
+    "run = client.create_run(experiment_id) # returns mlflow.entities.Run\n",
     "client.log_param(run.info.run_id, \"hello\", \"world\")\n",
     "client.set_terminated(run.info.run_id)"
    ]
@@ -274,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unknown-control",
+   "id": "announced-element",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,34 +439,22 @@
     "        verbose=False,\n",
     "        config=create_diamonds_config(batch_size))\n",
     "\n",
-    "    # model baseline performance\n",
     "    start_stats = trainer.validate()\n",
     "    print(start_stats)\n",
     "\n",
-    "    ml_run = client.create_run(experiments[0].experiment_id)\n",
+    "    ml_run = client.create_run(experiment_id)\n",
     "\n",
     "    for i in range(32):\n",
     "        train_stats = trainer.train()\n",
-    "        val_stats = trainer.validate()            \n",
-    "        client.log_metric(ml_run.info.run_id, \"validation_loss\", val_stats[\"validation_loss\"])            \n",
-    "        client.log_metric(ml_run.info.run_id, \"training_loss\", train_stats[\"train_loss\"])\n",
+    "        if i % 2 == 0:\n",
+    "            val_stats = trainer.validate()            \n",
+    "            client.log_metric(ml_run.info.run_id, \"validation_loss\", val_stats[\"validation_loss\"], step=i)\n",
+    "            client.log_metric(ml_run.info.run_id, \"training_loss\", train_stats[\"train_loss\"], step=i)\n",
     "        \n",
     "    client.set_terminated(ml_run.info.run_id)\n",
     "\n",
-    "    # model performance after training (should improve)\n",
     "    end_stats = trainer.validate()\n",
     "    print(end_stats)\n",
-    "\n",
-    "    # sanity check that training worked\n",
-    "    dloss = end_stats[\"validation_loss\"] - start_stats[\"validation_loss\"]\n",
-    "    dmse = (end_stats[\"validation_mean_squared_error\"] -\n",
-    "            start_stats[\"validation_mean_squared_error\"])\n",
-    "    print(f\"dLoss: {dloss}, dMSE: {dmse}\")\n",
-    "\n",
-    "    if dloss > 0 or dmse > 0:\n",
-    "        print(\"training sanity check failed. loss increased!\")\n",
-    "    else:\n",
-    "        print(\"success!\")\n",
     "        \n",
     "train_diamonds_mlflow()"
    ]
@@ -322,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "female-newsletter",
+   "id": "compatible-staff",
    "metadata": {},
    "outputs": [],
    "source": []
