--- a/01-Intro.ipynb
+++ b/01-Intro.ipynb
@@ -50,7 +50,7 @@
     "* 2016 - broad adoption across industries of R, PyData, Apache Spark\n",
     "* 2017 - broad rise of deep learning\n",
     "* 2018-2019 - decline of Hadoop/Spark for data science\n",
-    "* 2020 - new open tools and hybrid architectures\n",
+    "* 2020-2021 - new open tools and hybrid architectures\n",
     "\n",
     "__Theme: best-of-breed__\n",
     "\n",
@@ -131,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
