--- a/03-Features-Modeling.ipynb
+++ b/03-Features-Modeling.ipynb
@@ -194,8 +194,9 @@
     "    * Ray RLlib for deep reinforcement learning\n",
     "* Simulations and agent-based models\n",
     "    * Ray for stateful-agent simulations\n",
-    "    * (Dask is an option)\n",
-    "    \n",
+    "    * Dask Actors may be an option\n",
+    "\n",
+    "\n",
     "## Example: Linear Model with Dask"
    ]
   },
@@ -416,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
