update Dask JL template files, minor fix

--- a/08-RaySGD-MLflow.ipynb
+++ b/08-RaySGD-MLflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "married-madagascar",
+   "id": "saving-california",
    "metadata": {},
    "source": [
     "# Bonus: RaySGD + MLflow"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nuclear-native",
+   "id": "coated-receiver",
    "metadata": {},
    "source": [
     "## Distributed Deep Learning Made Simple: RaySGD\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "apparent-healthcare",
+   "id": "christian-adrian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "velvet-savage",
+   "id": "marked-chile",
    "metadata": {},
    "source": [
     "Next, we define our model using regular `tf.keras` components. We define a model-creation function, as RaySGD uses a factory pattern (basically a pattern that takes creator functions rather than object instances) for dependencies."
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adopted-communications",
+   "id": "transsexual-spokesman",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "certified-orange",
+   "id": "after-mother",
    "metadata": {},
    "source": [
     "Now we get to the RaySGD code. After definining a minimal \"config\" object, we define a trainer function that accomplishes these steps:\n",
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alternate-resort",
+   "id": "sealed-screen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "victorian-hometown",
+   "id": "expired-perry",
    "metadata": {},
    "source": [
     "Ok, now that we're all set up, let's start Ray and run the training!"
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "checked-wheat",
+   "id": "earned-nancy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vocal-stevens",
+   "id": "controlled-bryan",
    "metadata": {},
    "source": [
     "Note that the Dashboard which defaults to `localhost:8265` is a key part of the Ray system, but may not be compatible with (and visible through) the binder container proxy.\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sharp-plaintiff",
+   "id": "little-freeware",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cutting-translator",
+   "id": "coordinated-server",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "attended-coordinator",
+   "id": "green-induction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "banned-equation",
+   "id": "together-winning",
    "metadata": {},
    "source": [
     "For clarity, we'll define a bare-basics training function"
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dimensional-roberts",
+   "id": "voluntary-regard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "narrative-amendment",
+   "id": "theoretical-district",
    "metadata": {},
    "source": [
     "We won't get famous for these results, but we definitely made progress.\n",
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "authentic-archive",
+   "id": "russian-cliff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hydraulic-official",
+   "id": "invisible-evaluation",
    "metadata": {},
    "source": [
     "This info should appear in the UI (though it may require a refresh)\n",
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bigger-expert",
+   "id": "national-honduras",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "limited-biology",
+   "id": "monthly-music",
    "metadata": {},
    "source": [
     "Now let's look at a more realistic use of MLflow, including\n",
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "purple-czech",
+   "id": "inappropriate-chorus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "horizontal-transaction",
+   "id": "bored-edition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "advisory-induction",
+   "id": "negative-slope",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "announced-element",
+   "id": "elementary-subject",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compatible-staff",
+   "id": "impressive-joseph",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "normal-enzyme",
    "metadata": {},
    "outputs": [],
    "source": []
